@@ -114,7 +114,7 @@ Daniel Nylander <po danielnylander se> (Swedish)
 Alexandre Prokoudine <alexandre.prokoudine gmail.com> (Russian)
 Kamil Páral <ripper42 gmail.com > (Czech)
 Stefano Luciani <luciani.fa tiscali.it > (Italian)
-Martin Seifert <martinseifert fastmail.fm> (German)
+Uwe Bugla <uwe.bugla@gmx.de> (German)
 Nizar Kerkeni <nizar.kerkeni gmail.com>(Arabic)
 amenudo (Basque)
 rainofchaos (Simplified Chinese)
